Fixed blurred image

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -69,4 +69,7 @@
   .flow {
     @apply fixed w-[100%] h-[100%] top-0 left-0 backdrop-blur-sm z-20;
   }
+  .disable-blur {
+    image-rendering: -webkit-optimize-contrast;
+  }
 }
